# supaplex-rs

./: .gitignore  Cargo.toml  README.md
src/: bug_state.rs  entity.rs  gravity.rs  grid.rs  level.rs  level_loader.rs  macros.rs  main.rs  murphy.rs  pixel_camera.rs  stupid.rs  tile.rs  tiles.rs  world.rs
src/level/components/: direction_component.rs  interaction_component.rs  mod.rs  move_component.rs  transitory_component.rs  update_component.rs
src/level/systems/: ai_system.rs  gravity_system.rs  mod.rs  murphy_system.rs  simple_gravity_system.rs  transitory_system.rs
src/tile_data/: mod.rs  tile.rs  tile_interaction.rs  tile_move.rs  tile_state.rs  tile_type.rs  tile_update.rs
src/tile_data/systems/: ai_system.rs  explode_system.rs  gravity_system.rs  mod.rs  murphy_system.rs  orange_disk_system.rs  transitory_system.rs
